[gd_scene load_steps=6 format=3 uid="uid://j4k2qlwfn1j"]

[ext_resource type="Script" path="res://scenes/in_game_equation.gd" id="1_oalic"]
[ext_resource type="StyleBox" uid="uid://cr37djakuetom" path="res://scenes/equation_box.tres" id="2_evek4"]
[ext_resource type="StyleBox" uid="uid://cvee8fp0jmc12" path="res://scenes/empty_equation_box.tres" id="3_8btnd"]

[sub_resource type="Curve" id="Curve_1ye3j"]
_data = [Vector2(0, 0.499358), 0.0, 0.0, 0, 0, Vector2(0.550314, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_u7oiw"]
offsets = PackedFloat32Array(0, 0.239865, 1)
colors = PackedColorArray(1, 1, 0, 1, 1, 1, 0, 1, 0, 1, 0, 1)

[node name="in-game-equation" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oalic")

[node name="main_strip" type="ColorRect" parent="."]
custom_minimum_size = Vector2(0, 120)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
color = Color(0.0909426, 0, 0.503951, 1)

[node name="GridContainer" type="GridContainer" parent="main_strip"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -208.0
offset_top = -41.5
offset_right = 208.0
offset_bottom = 41.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 20
columns = 6

[node name="num1" type="PanelContainer" parent="main_strip/GridContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_styles/panel = ExtResource("2_evek4")

[node name="Label" type="Label" parent="main_strip/GridContainer/num1"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 60
text = "45"

[node name="operator" type="PanelContainer" parent="main_strip/GridContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_styles/panel = ExtResource("2_evek4")

[node name="Label" type="Label" parent="main_strip/GridContainer/operator"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 60
text = "+"

[node name="num2" type="PanelContainer" parent="main_strip/GridContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_styles/panel = ExtResource("2_evek4")

[node name="Label" type="Label" parent="main_strip/GridContainer/num2"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 60
text = "45"

[node name="equal to" type="PanelContainer" parent="main_strip/GridContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_styles/panel = ExtResource("2_evek4")

[node name="Label" type="Label" parent="main_strip/GridContainer/equal to"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 60
text = "="

[node name="result" type="PanelContainer" parent="main_strip/GridContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_styles/panel = ExtResource("2_evek4")

[node name="Label" type="Label" parent="main_strip/GridContainer/result"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 60
text = "90"

[node name="correct" type="PanelContainer" parent="main_strip/GridContainer"]
visible = false
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_styles/panel = ExtResource("2_evek4")

[node name="Label" type="Label" parent="main_strip/GridContainer/correct"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 60
text = "âœ“"
horizontal_alignment = 1
vertical_alignment = 1

[node name="incorrect" type="PanelContainer" parent="main_strip/GridContainer"]
visible = false
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_styles/panel = ExtResource("3_8btnd")

[node name="Label" type="Label" parent="main_strip/GridContainer/incorrect"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 60
text = "X"
horizontal_alignment = 1
vertical_alignment = 1

[node name="celebrationParticles" type="CPUParticles2D" parent="main_strip"]
emitting = false
amount = 40
lifetime = 2.0
one_shot = true
explosiveness = 0.5
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 300)
initial_velocity_min = 300.0
initial_velocity_max = 300.0
scale_amount_min = 5.0
scale_amount_max = 20.0
scale_amount_curve = SubResource("Curve_1ye3j")
color_ramp = SubResource("Gradient_u7oiw")

[node name="bottom_strip" type="ColorRect" parent="."]
custom_minimum_size = Vector2(0, 80)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.0901961, 0, 0.505882, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="bottom_strip"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="timer" type="Label" parent="bottom_strip/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Time : 0:49"

[node name="equation_solved" type="Label" parent="bottom_strip/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Equation Solved : 0 / 5"

[node name="status" type="Label" parent="bottom_strip/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 20
text = "You solved all equations in : 5:59 .
Heading Back to main menu in 5 s ..."

[node name="next_equation" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[connection signal="timeout" from="next_equation" to="." method="_on_next_equation_timeout"]
